[tool.poetry]
name = "coengage_clickhouse_orm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
iso8601 = "^1.0.2"
pytz = "^2022.2.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
